# serial-sniffer

./: .gitignore  .pre-commit-config.yaml  README.md  serial_sniffer.py  setup.cfg  tox.ini
.github/workflows/: main.yml
serial_sniffer/: __main__.py  main.py  serial_reader.py  sniffer.py  utils.py
src/serial_sniffer/: main.py  serial_reader.py  sniffer.py  tools.py  utils.py
tests/: conftest.py  main_test.py  serial_reader_test.py  sniffer_test.py  test_utils.py  tools_test.py  utils_test.py
