[metadata]
name = serial-sniffer
version = 0.1.1
description = Simple way to sniff dev ports.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://gitlab.mobileye.com/idof/serial-sniffer
author = Ido Frenkel
author_email = ido.frenkel@mobileye.com

[options]
py_modules = serial_sniffer
install_requires =
    pyserial>=3.5
python_requires = >=3.7

[options.entry_points]
console_scripts =
    serial-sniffer = serial_sniffer:main