[metadata]
name = serial_sniffer
version = 0.1.1
description = Simple way to sniff dev ports.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ido123net/serial-sniffer
author = Ido Frenkel
author_email = ido.frenkel@mobileye.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    psutil>=5.9.4
    pyserial>=3.5
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    serial-sniffer = serial_sniffer.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
